--- a/main.html
+++ b/main.html
@@ -7,10 +7,48 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <section>
+        <h1>table</h1>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Roll numbers</th>
+                    <th>Names</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Riya Sharma</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Radha Sharma</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Radhika Sharma</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <section>
+        <h1>Ordered List</h1>
+        <ol>
+            <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
+            <li>
+                <video controls width="300px">
+                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                </video>
+            </li>
+            <li>
+                <audio controls>
+                    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                </audio>
+            </li>
+        </ol>
+    </section>
 </body>
+    <script type="text/javascript" src="./script.js"></script>
 
 </html>
