--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
             </tbody>
         </table>
     </section>
+    <h2>List of medias</h2>
     <section>
         <h1>Ordered List</h1>
         <ol>
