--- a/main.html
+++ b/main.html
@@ -7,48 +7,50 @@
 </head>
 
 <body>
-    <section>
-        <h1>table</h1>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Roll numbers</th>
-                    <th>Names</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Riya Sharma</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Radha Sharma</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Radhika Sharma</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <h2>List of medias</h2>
-    <section>
-        
-        <ol>
-            <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
-            <li>
-                <video controls width="300px">
-                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-                </video>
-            </li>
-            <li>
-                <audio controls>
-                    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                </audio>
-            </li>
-        </ol>
-    </section>
+   <table border="1" style="width: 50%;">
+    <thead>
+      <tr>
+        <th>Roll Number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Shubham</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Aarav</td>
+      </tr>
+      <tr>
+        <td>103</td>
+        <td>Priya</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Heading between table and list -->
+  <h2>List of medias</h2>
+
+  <!-- Ordered list of media items -->
+  <ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="Random image from Picsum">
+    </li>
+    <li>
+      <video width="320" height="240" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </li>
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+        Your browser does not support the audio element.
+      </audio>
+    </li>
+  </ol>
 </body>
     <script type="text/javascript" src="./script.js"></script>
 
