--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   </table>
 
   <!-- Heading between table and list -->
-  <h2>List of medias</h2>
+  List of medias
 
   <!-- Ordered list of media items -->
   <ol>
